@@ -1,3 +1,14 @@
+2021-05-11  Jean-Yves Avenard  <jya@apple.com>
+
+        Adopt CoreMedia SPI to identify audio-only playback for MSE clients
+        https://bugs.webkit.org/show_bug.cgi?id=225647
+        rdar://76138365
+
+        Reviewed by Youenn Fablet.
+
+        * pal/spi/cocoa/AVFoundationSPI.h: Add forward declaration for new methods
+          while this isn't in SDK yet.
+
 2021-05-10  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [macOS] Allow immediate action gestures to begin when force clicking text inside image overlays
